--- a/playbooks/deploy_adguard.yml
+++ b/playbooks/deploy_adguard.yml
@@ -24,7 +24,7 @@
           - "53:53/tcp"
           - "53:53/udp"
           - "67:67/udp"
-          - "68:68/udp"
+          # - "68:68/udp" conflicts with the network manager
           - "80:80/tcp"
           - "443:443/tcp"
           - "3000:3000/tcp"
