--- a/playbooks/deploy_traefik.yml
+++ b/playbooks/deploy_traefik.yml
@@ -1,52 +1,34 @@
-# Untestet
-- name: Deploy Traefik as Reverse Proxy
+# playbooks/deploy_traefik.yml
+
+- name: Deploy Traefik as Reverse Proxy with DNS-01 Challenge
   hosts: raspberrypi
   become: yes
   vars:
-    domain: "{{ domain }}"  # Replace with your actual domain
-    email: "{{ email }}"  # Replace with your email for Let's Encrypt
+    traefik_config_dir: /home/{{ ansible_user }}/traefik
   tasks:
     - name: Create Traefik configuration directory
       file:
-        path: /home/{{ ansible_user }}/traefik
+        path: "{{ traefik_config_dir }}"
         state: directory
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
-    
-    - name: Create Traefik configuration file
-      copy:
-        dest: /home/{{ ansible_user }}/traefik/traefik.yml
-        content: |
-          entryPoints:
-            web:
-              address: ":80"
-            websecure:
-              address: ":443"
-            openvpn:
-              address: ":1194"
+        mode: '0755'
 
-          providers:
-            docker:
-              endpoint: "unix:///var/run/docker.sock"
-              exposedByDefault: false
-
-          certificatesResolvers:
-            letsencrypt:
-              acme:
-                email: "{{ email }}"
-                storage: /letsencrypt/acme.json
-                httpChallenge:
-                  entryPoint: web
-        owner: "{{ ansible_user }}"
-        group: "{{ ansible_user }}"
-    
     - name: Create acme.json file for Let's Encrypt
       file:
-        path: /home/{{ ansible_user }}/traefik/acme.json
+        path: "{{ traefik_config_dir }}/acme.json"
         state: touch
         mode: '600'
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
+
+    - name: Create Traefik configuration file
+      template:
+        src: ../templates/traefik.yml.j2
+        dest: "{{ traefik_config_dir }}/traefik.yml"
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
+        mode: '0644'
 
     - name: Run Traefik container
       docker_container:
@@ -56,10 +38,11 @@
         ports:
           - "80:80"
           - "443:443"
-          - "8080:8080"  # For Traefik dashboard (secure this in production)
         volumes:
           - "/var/run/docker.sock:/var/run/docker.sock:ro"
-          - "/home/{{ ansible_user }}/traefik/traefik.yml:/traefik.yml:ro"
-          - "/home/{{ ansible_user }}/traefik/acme.json:/letsencrypt/acme.json"
+          - "{{ traefik_config_dir }}/traefik.yml:/traefik.yml:ro"
+          - "{{ traefik_config_dir }}/acme.json:/acme.json"
+        env:
+          CF_API_TOKEN: "{{ cloudflare_api_token }}"
         labels:
-          - "traefik.enable=true"
+          traefik.enable: "true"
